# ballot-buddies

./: .gitignore  .isort.cfg  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  envrc.example  main.py  mypy.ini  pyproject.toml  requirements.txt  verchew.ini
app/: __init__.py  api.py  graph.py  models.py  views.py
app/templates/: friends.html  login.html
tests/: test_ballot_buddies.py
